# hpp-timeopt-corba

./: CMakeLists.txt  README.md
config/: cfg_momSc_demo01.yaml  cfg_momTr_demo01.yaml  cfg_timeopt_demo01.yaml
data/: CMakeLists.txt  manifest.xml  package.xml
data/config/: joint_names_RED_DYROS_2.yaml
data/launch/: display.launch  gazebo.launch
data/meshes/: L_arm.stl  L_elbow.stl  L_forearm.stl  L_shoulder1.stl  L_shoulder2.stl  L_shoulder3.stl  L_wrist1.stl  L_wrist2.stl  Pelvis_link.stl  R_arm.stl  R_elbow.stl  R_forearm.stl  R_shoulder1.stl  R_shoulder2.stl  R_shoulder3.stl  R_wrist1.stl  R_wrist2.stl  upperbody.stl  waist1.stl  waist2.stl
data/meshes/red/: red_lleg.stl  red_rleg.stl  red_whole.stl  trunk.stl
data/moveit/: CMakeLists.txt  package.xml
data/moveit/config/: red_robot.srdf
data/moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
data/srdf/: red_lleg.srdf  red_rleg.srdf  red_robot.srdf  red_trunk.srdf
data/urdf/: RED_DYROS_2.URDF~  darpa.urdf  red_description.URDF~  red_description.urdf~  red_lleg.urdf  red_rleg.urdf  red_robot.urdf  red_trunk.urdf
idl/hpp/corbaserver/timeopt/: problem.idl
include/hpp/corbaserver/timeopt/: conversion.hh  fwd.hh  server.hh
script/: config.py  demo.py  demo.py~  demo_using_rbprm.py  demo_using_rbprm.py~  run.sh
src/: CMakeLists.txt  hpp-timeopt-corba.cc  problem.impl.cc  problem.impl.hh  server.cc
src/hpp/corbaserver/timeopt/: ComPath.py  __init__.py  client.py  timeOptSolver.py
