<?xml version="1.0"?>
<package>
  <name>red_description</name>
  <version>0.0.0</version>
  <description>The dyros_red_description package</description>

  <maintainer email="simjeh@snu.ac.kr">Suhan Park</maintainer>

  <license>BSD</license>

  <author email="simjeh@snu.ac.kr">Suhan Park</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
